# Engine

./: CMakeLists.txt  readme.md
src/: camera.cpp  camera.hpp  engine.cpp  engine.hpp  load-shader.cpp  main.cpp  renderer.cpp  renderer.hpp  renderingobject.cpp  renderingobject.hpp
src/shaders/: shader.fragmentshader  shader.vertexshader
